--- a/public/css/logout.css
+++ b/public/css/logout.css
@@ -1,10 +1,76 @@
 @charset "UTF-8";
 
-html{
+html {
     height: 100%;
 }
 
-body{
-    height: 100%;
-    background: #186AC9;
+body {
+    height: 100vh;
+    background-color: #FFFF66;
+    background-image: linear-gradient(0deg, #FFFF66 0%, #186AC9 100%);
+}
+
+header {
+    padding: 50px 0;
+    width: 400px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+
+#container {
+    width: 300px;
+    height: 400px;
+    margin: 0 auto;
+    padding: 20px 20px;
+    border-radius: 7%;
+    background: rgba(51, 0, 51, 0.10);
+
+}
+
+.btn-login {
+    color: #fff;
+    background-color: #FF3366;
+    margin-bottom: 20px;
+    border-radius: 10px;
+    text-align: center;
+    border: 0px;
+    font-size: 10pt;
+    padding: 10px 20px;
+    margin-left: auto;
+}
+
+
+
+.title {
+    color: #fff;
+    margin-bottom: 10px;
+    font-size: 20pt;
+}
+
+p,
+a,
+h2 {
+    color: #fff;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+img.atlas {
+    width: 45%;
+    height: 45%;
+}
+
+.form-group {
+    margin-bottom: 40px;
+}
+
+label {
+    display: block;
+    color: #fff;
+}
+
+input {
+    display: block;
+    color: #000;
 }
