--- a/public/css/style.css
+++ b/public/css/style.css
@@ -123,7 +123,7 @@ img.atlas {
 
 .modal {
     display: none;
-    height: 100vh;
+    height: 200vh;
     position: fixed;
     top: 0;
     width: 100%;
@@ -146,19 +146,32 @@ img.atlas {
     width: 60%;
 }
 
+
+
 /* top */
 li {
     list-style: none;
     border-bottom: 1px solid #C0C0C0;
     display: flex;
     padding-left: 100px;
+    margin-bottom: 10px;
 }
+
+
 
 .post-block2 {
     list-style: none;
     border-bottom: 7px solid #C0C0C0;
     display: flex;
     padding: 40px;
+}
+
+.post-block3 {
+    list-style: none;
+    display: flex;
+    border-bottom: none;
+    padding-left: 300px;
+    padding-right: 300px;
 }
 
 .post-content {
@@ -203,4 +216,33 @@ img.post-btn {
 img.post-btn2 {
     width: 20%;
     height: 20%;
+}
+
+/* list */
+
+h2 {
+    font-size: 10px;
+    padding-right: 30px;
+}
+
+.post-content2 {
+    width: 100%;
+    padding: 15px;
+}
+
+.post-content2>div {
+    display: flex;
+    padding: 5px;
+}
+
+.user-name {
+    padding-right: 30px;
+}
+
+.user-data {
+    font-size: 20px;
+}
+
+.word {
+    padding-left: 100px;
 }
