--- a/public/css/logout.css
+++ b/public/css/logout.css
@@ -1,13 +1,12 @@
 @charset "UTF-8";
 
 html {
-    height: 100%;
+    height: 120%;
 }
 
 body {
-    height: 100vh;
-    background-color: #FFFF66;
-    background-image: linear-gradient(0deg, #FFFF66 0%, #186AC9 100%);
+    background-color: #FFFF33;
+    background-image: linear-gradient(0deg, #FFFF33 0%, #186AC9 100%);
 }
 
 header {
@@ -20,7 +19,7 @@ header {
 
 #container {
     width: 300px;
-    height: 400px;
+    height: auto;
     margin: 0 auto;
     padding: 20px 20px;
     border-radius: 7%;
@@ -73,4 +72,21 @@ label {
 input {
     display: block;
     color: #000;
+}
+
+.message {
+    padding: 20px;
+}
+
+.login-btn {
+    color: #fff;
+    background-color: #FF3366;
+    width: 100px;
+    margin: 0 auto;
+    margin-bottom: 20px;
+    border-radius: 10px;
+    text-align: center;
+    border: 0px;
+    font-size: 10pt;
+    padding: 10px 20px;
 }
