--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,7 +35,7 @@ img.atlas {
 .menu-trigger {
     position: absolute;
     top: 20px;
-    right: 5px;
+    right: 2px;
     height: 100px;
     width: 20%;
 }
@@ -44,24 +44,40 @@ img.atlas {
     transform: rotate(-180deg);
 }
 
+
 .nav-wrapper {
     display: none;
     background: #fff;
-    border-left: 1px solid #000;
-    border-bottom: 1px solid #000;
+    border-left: 1px solid #727272;
+    border-bottom: 1px solid #727272;
+    width: 100%;
+    text-align: left;
 }
 
 
 .nav-wrapper ul li {
     display: block;
-    flex-basis: 20%;
     text-align: center;
     color: #fff;
-    padding: 30px 10px;
+    padding: 30px 0px;
+    border-bottom: none;
+    width: 100%;
+
+}
+
+.nav-wrapper a {
+    text-decoration-line: none;
+    color: #000;
+    font-size: 15pt;
 }
 
 .link {
     background: #000080;
+}
+
+.link a {
+    color: #fff;
+    font-size: 15pt;
 }
 
 
@@ -117,8 +133,8 @@ img.atlas {
 
 
 .content {
-    margin: 0 auto;
     padding: 40px;
+    margin-left: auto;
 }
 
 .modal {
@@ -156,7 +172,6 @@ li {
     padding-left: 100px;
     margin-bottom: 10px;
 }
-
 
 
 .post-block2 {
@@ -208,14 +223,13 @@ li {
 }
 
 img.post-btn {
-    width: 30%;
-    height: 30%;
-
+    width: 70px;
+    height: 70px;
 }
 
 img.post-btn2 {
-    width: 20%;
-    height: 20%;
+    width: 40px;
+    height: 40px;
 }
 
 /* list */
