--- a/public/css/logout.css
+++ b/public/css/logout.css
@@ -37,6 +37,7 @@ header {
     font-size: 10pt;
     padding: 10px 20px;
     margin-left: auto;
+    width: 100px;
 }
 
 
@@ -72,6 +73,11 @@ label {
 input {
     display: block;
     color: #000;
+    width: 98%;
+    border-radius: 5px;
+    margin-left: auto;
+    height: 30px;
+    font-size: 15pt;
 }
 
 .message {
